# Contradictory-My-Dear-Watson

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.dvc/: config
app/backend/: Dockerfile  main.py  schemas.py  service.py
app/frontend/: app.js  index.html  style.css
configs/: data_split.yaml
data/: raw.dvc
data/processed/: .gitignore
docs/: deployment.md  onboarding.md
embeddings/e5/: .gitignore
helpers/: __init__.py  data.py  metrics.py  mlflow.py  submission.py
notebooks/: 01_bow_decision_tree_research.ipynb  02_word2vec_sentence_pair_research.ipynb  02_xgboost_normalization_research.ipynb  03_tfidf_model_search.ipynb  04_char_tfidf_model_search.ipynb  04_spacy_xgboost_advanced_features.ipynb  05_combined_sparse_model_search.ipynb  06_e5_multimodel_optuna.ipynb  07_transformer_embedding_structure_experiments.ipynb
scripts/: generate_embeddings.py  prepare_splits.py  promote_model.py  train_stacked.py  validate_data.py
tests/: test_data_scripts.py  test_fastapi_service.py  test_metrics.py  test_submission.py
tests/fixtures/: sample_submission.csv  test.csv  train.csv
