[project]
name = "contradictory-my-dear-watson"
version = "0.1.0"
description = "Notebook-first Kaggle experimentation workflow with DVC data splits and MLflow logging."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc[s3]>=3.59.0",
    "fastapi>=0.115.0",
    "gensim>=4.4.0",
    "joblib>=1.4.2",
    "lightgbm>=4.6.0",
    "mlflow>=2.17.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "simplemma>=1.1.2",
    "uvicorn[standard]>=0.32.0",
    "xgboost>=2.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nbstripout>=0.7.1",
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helpers", "app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
