[project]
name = "contradictory-my-dear-watson"
version = "0.1.0"
description = "NLI classification using stacked models and E5 embeddings."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "joblib>=1.4.2",
    "lightgbm>=4.6.0",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "uvicorn[standard]>=0.32.0",
    "xgboost>=2.1.0",
]

[dependency-groups]
dev = [
    "dvc[s3]>=3.59.0",
    "mlflow>=2.17.0",
    "optuna>=4.8.0",
    "seaborn>=0.13.2",
    "gensim>=4.4.0",
    "simplemma>=1.1.2",
    "ipykernel>=6.29.5",
    "nbstripout>=0.7.1",
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helpers", "app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
